# hsh-rs

./: Cargo.toml  README.md
src/: fnv.rs  lib.rs  murmur.rs
